--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
   
 }
 
@@ -15,6 +16,7 @@ body {
  background-size: cover;
  min-height: 100vh;
  background-color: #232323;
+
 
  
 }
@@ -72,7 +74,25 @@ body {
     font-size: 20px;
     padding: 5px;
     margin-left: 10px;
+    cursor: pointer;
  }
+
+ .card-todo h5:hover {
+    color: #32B51A;
+ }
+
+
+ 
+ .card-progress h5:hover {
+    color: #343C84;
+ }
+
+
+ .card-done h5:hover {
+    color: #7878D3;
+ }
+
+
 
 
 header {
@@ -117,7 +137,6 @@ header input {
     outline: none;
     border: none;
     background-color: #343c84;
-    padding-bottom: 4px;
     color: #fff;
    position: absolute;
     top: -5px;
@@ -231,3 +250,75 @@ p {
     font-size: 20px;
     font-weight: 700;
 }
+
+
+/* Estilo para o modal */
+.modal {
+    display: none; /* Oculto por padrão */
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4); 
+    padding-top: 60px;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+
+.tasks-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 20px;
+}
+
+.task-card {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    width: 200px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.task-card h3 {
+    margin-bottom: 10px;
+    font-size: 1.2em;
+}
+
+.task-card p {
+    margin-bottom: 5px;
+    font-size: 0.9em;
+}
+
+.task-card .status {
+    font-weight: bold;
+    margin-top: 10px;
+}
+
